# pvbeservices

./: .gitignore  Cargo.toml  README.md  build-all.sh
autotag/: Cargo.toml  README.md  build.sh
autotag/src/: autotag.rs  main.rs  route.rs  schema.rs
autotag/src/clients/: mod.rs  textseg.rs
pvrustlib/: Cargo.toml
pvrustlib/src/: lib.rs
