[package]
name = "pvrustsvc-autotag"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0.0-beta.14"
actix-cors = "0.6.0-beta.4"
actix-rt = "2.5.0"
tokio = { version = "1", features = ["full"] }
bson = "2.0.1"
base64 = "0.13.0"
rand = "0.8"
chrono = "0.4"
md-5 = "0.10.0"
hex = "0.4.3"
serde_json = "1.0"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
pvrustlib = {path = "../pvrustlib"}
strum = "0.23.0"
strum_macros = "0.23.1"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tracing-appender = "0.2.0"

[profile.release]
lto = true # Link Time Optimization (LTO)
#panic = "abort"
